--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -11,7 +11,7 @@
 	<tbody>
 		<% @sales.each do |sale| %>
 			<tr>
-				<td><%= sale.email %></td>  	
+				<td><%= sale.email %></td>
 				<td><%= sale.first_name %></td>
 				<td><%= sale.last_name %></td>
 			</tr>
@@ -23,3 +23,5 @@
 	<%= file_field_tag :file %>
 	<%= submit_tag "Upload" %>
 <% end %>
+
+<%= link_to " Download CSV", sales_path(format: "csv") %>
