--- a/app/views/sales/index.html.erb
+++ b/app/views/sales/index.html.erb
@@ -1,21 +1,5 @@
-<nav class="navbar navbar-light bg-faded">
-  <ul class="nav navbar-nav">
-    <li class="nav-item active">
-      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Features</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">Pricing</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#">About</a>
-    </li>
-  </ul>
-</nav>
 <% if flash[:notice] %>
-  <div class="notice"><%= flash[:notice] %></div>
+  <div class="alert alert-success" role="alert"><%= flash[:notice] %></div>
 <% end %>
 <table class="table table-bordered">
 	<thead class="thead-inverse">
@@ -87,10 +71,3 @@
 		<% end %>
 	</tbody>
 </table>
-
-<%= form_tag import_sales_path, multipart: true do %>
-	<%= file_field_tag :file %>
-	<%= submit_tag "Upload" %>
-<% end %>
-
-<%= link_to " Download CSV", sales_path(format: "csv") %>
