Edit stats view

--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -9,5 +9,8 @@
     <li class="nav-item">
       <%= link_to "Export", sales_path(format: "csv"), :class => "nav-link" %>
     </li>
+    <li class="nav-item">
+      <%= link_to "Statistiques", stats_sales_path, :class => "nav-link" %>
+    </li>
   </ul>
 </nav>
